using rootDomainObject specific read instead of ObjectFenixOJB.readByOID method